--- a/client/src/components/market/index.css
+++ b/client/src/components/market/index.css
@@ -1,12 +1,9 @@
-.about {
-    height: 900px;
+.my_nft_title {
+    margin-top: 30px;
+    margin-left: 30px;
+    
+}
+
+.nft_list {
     display: flex;
-    align-items: center;
 }
-
-.about_text {
-    text-align: center;
-    margin: auto;
-    font-size: 45px;
-}
-
