add stake and unstake function

--- a/client/src/components/staking/index.css
+++ b/client/src/components/staking/index.css
@@ -11,6 +11,10 @@
     font-size: 20px;
 }
 
+.staking_left p {
+    margin: 10px;
+}
+
 .staking_right {
     text-align: center;
     font-weight: 700;
