1. add getprice function for market contract 2. display sale price for market

--- a/client/src/components/displaycard_for_market/index.css
+++ b/client/src/components/displaycard_for_market/index.css
@@ -19,3 +19,12 @@
 .power_div {
     text-align: center;
 }
+
+.price_value {
+    font-size: 30px;
+    text-align: center;
+}
+
+.button {
+    margin-top: 20px;
+}
